--- a/pk_example.ipynb
+++ b/pk_example.ipynb
@@ -262,6 +262,9 @@
    "outputs": [],
    "source": [
     "# Leverage the pandas library to download all the data\n",
+    "\n",
+    "### PLEASE NOTE, DATA MUST BE NORMALIZED ###\n",
+    "\n",
     "mydata = pd.read_csv('/Users/peytonchen/Desktop/sampledata.csv') #Insert filepath to where you would like to upload the csv file\n",
     "mydata = mydata.iloc[:,:3] # Depends on what you want to focus on\n",
     "mydata = mydata.sort_values(by = ['time ']) # Will probably want to sort the data by time or whatever your time column is named"
