--- a/pk_example.ipynb
+++ b/pk_example.ipynb
@@ -263,7 +263,7 @@
    "source": [
     "# Leverage the pandas library to download all the data\n",
     "\n",
-    "### PLEASE NOTE, DATA MUST BE NORMALIZED ###\n",
+    "### PLEASE NOTE, DATA MUST BE NORMALIZED if not, this will produce interesting results...###\n",
     "\n",
     "mydata = pd.read_csv('/Users/peytonchen/Desktop/sampledata.csv') #Insert filepath to where you would like to upload the csv file\n",
     "mydata = mydata.iloc[:,:3] # Depends on what you want to focus on\n",
